# bachelors

./: .gitignore  README.md
reservation-system/client/: Cargo.toml
reservation-system/client/src/: main.rs
reservation-system/esp-app/: Cargo.toml
reservation-system/esp-app/src/: index.html  lib.rs  web.rs
reservation-system/esp-c/: CMakeLists.txt
reservation-system/esp-c/main/: CMakeLists.txt  esp-http.c
reservation-system/reservation-server/: Cargo.toml  Rocket.toml  main.sqlite
reservation-system/reservation-server/src/: booking_process.rs  cred.rs  db_manager.rs  main.rs  paste_ids.rs
reservation-system/reservation-server/templates/: hi.html.hbs  index.html.hbs  login.html.hbs
reservation-system/reservation-server/upload/: 3dN  MIT2  eXNH
