[package]
name = "reservation-server"
version = "0.1.0"
edition = "2024"

[dependencies]
local-ip-address = "0.6.5"
rand = "0.9.2"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.226"
tokio = "1.47.1"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]





