[package]
name = "reservation-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.226"
ipnet = { version = "2", features = ["serde"] }


[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["handlebars"]







